update eportApp file

--- a/exportOptionsAppStore.plist
+++ b/exportOptionsAppStore.plist
@@ -2,13 +2,26 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-        <key>DUC3M273M2</key>
-        <string>6447513780</string>
-        <key>method</key>
-        <string>app-store</string>
-        <key>uploadSymbols</key>
-        <true/>
-        <key>uploadBitcode</key>
-        <true/>
+	<key>destination</key>
+	<string>upload</string>
+	<key>method</key>
+	<string>app-store</string>
+	<key>provisioningProfiles</key>
+	<dict>
+		<key>$(PRODUCT_BUNDLE_IDENTIFIER)</key>   <!-- Please update this -->
+		<string>NYTimes</string>  <!-- Please update this -->
+	</dict>
+	<key>signingCertificate</key>
+	<string>iPhone Distribution</string>
+	<key>signingStyle</key>
+	<string>manual</string>
+	<key>stripSwiftSymbols</key>
+	<true/>
+	<key>teamID</key>
+	<string>DUC3M273M2</string>  <!-- Please update this -->
+	<key>uploadBitcode</key>
+	<true/>
+	<key>uploadSymbols</key>
+	<true/>
 </dict>
 </plist>
